--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@headlessui/react": "^1.3.0",
     "@tailwindcss/typography": "^0.4.1",
+    "axios": "^0.21.4",
+    "date-fns": "^2.24.0",
     "lodash": "^4.17.21",
     "next": "latest",
     "prettier": "^2.3.2",
