--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@tailwindcss/typography": "^0.4.1",
     "axios": "^0.21.4",
     "date-fns": "^2.24.0",
+    "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
     "next": "latest",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.171",
