--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"vercel-build": "yum install libuuid-devel libmount-devel && cp /lib64/{libuuid,libmount,libblkid}.so.1 node_modules/canvas/build/Release/ && npm run build"
+		"now-build": "cp canvas_lib64/*so.1 node_modules/canvas/build/Release/"
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.3.0",
