--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.3.0",
-		"@mdx-js/loader": "^2.1.1",
-		"@next/mdx": "^12.1.6",
-		"@react-three/fiber": "^8.0.22",
 		"@tailwindcss/typography": "^0.4.1",
 		"axios": "^0.21.4",
 		"canvas": "^2.9.1",
@@ -25,15 +22,12 @@
 		"react-dom": "^17.0.2",
 		"react-intersection-observer": "^8.32.1",
 		"react-remark": "^2.1.0",
-		"swr": "^1.3.0",
-		"three": "^0.141.0"
+		"swr": "^1.3.0"
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.14.171",
-		"@types/mdx": "^2.0.2",
 		"@types/node": "^17.0.39",
 		"@types/react": "^17.0.11",
-		"@types/three": "^0.141.0",
 		"autoprefixer": "^10.2.6",
 		"postcss": "^8.3.5",
 		"tailwindcss": "^2.2.4",
