--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 		"@headlessui/react": "^1.3.0",
 		"@tailwindcss/typography": "^0.4.1",
 		"axios": "^0.21.4",
-		"canvas": "^2.9.1",
 		"date-fns": "^2.24.0",
 		"framer-motion": "^6.3.10",
+		"jimp": "^0.16.1",
 		"lodash": "^4.17.21",
 		"next": "^12.1.6",
 		"prettier": "^2.3.2",
